- Use monospaced Consolas font for Technical Details tab in unified dialogs for better readability of system information
- Add URL validation to Get Info and Download buttons to prevent invalid input
- Show error dialog with supported URL formats when invalid URL is entered
- Prevent yt-dlp from being invoked with nonsense input
- Add column header sorting to cache ListView: click Title, Duration, or File Size to sort
- Implement toggle between ascending and descending sort order on repeated column clicks
- Add comprehensive right-click context menu to cache ListView with Delete, Copy operations, and Select All
- Add Delete key (Del) accelerator for deleting selected cache entries
- Add Ctrl+C accelerator for copying YouTube URL from selected cache entry
- Implement fixed Edit menu structure with ListView-specific items
- Edit menu now shows: Undo, Cut, Copy, Paste, Select All, Delete, Copy Title, Copy Path
- Copy menu item changes to "Copy YouTube URL" when ListView has focus
- Disable Undo, Cut, Paste when ListView has focus
- Disable Delete, Copy Title, Copy Path when ListView does not have focus
- Enable/disable menu items based on ListView selection state
- Disable Copy menu items (Copy Title, Copy Path, Copy YouTube URL) when multiple videos are selected
- Only Delete and Select All remain enabled for multiple selections in ListView
- Implement ID_LISTVIEW_COPY_TITLE handler to copy video title to clipboard
- Implement ID_LISTVIEW_COPY_PATH handler to copy file path to clipboard
- Implement ID_LISTVIEW_COPY_URL handler to copy reconstructed YouTube URL to clipboard
- Implement ID_LISTVIEW_DELETE handler to trigger delete operation via Delete button
- Fix ListView sorting to use ListView_SortItems for proper lParam handling
- Refactor Select All functionality to use new SelectAllListViewItems helper function
- Fix Edit menu to rebuild consistently on each popup to prevent item accumulation

Cache Management: