@@ -28,6 +28,11 @@ User Interface:
 - Add URL validation to Get Info and Download buttons to prevent invalid input
 - Show error dialog with supported URL formats when invalid URL is entered
 - Prevent yt-dlp from being invoked with nonsense input
+- Add validation to reject multiple space-separated URLs in input field
+- Add validation to reject YouTube playlist URLs (containing 'list=' or '/playlist?')
+- Display informative error dialogs explaining single-video limitation and how to download from playlists
+- Implement ContainsMultipleURLs function to detect space-separated URLs
+- Implement IsYouTubePlaylistURL function to detect playlist URLs
 - Add column header sorting to cache ListView: click Title, Duration, or File Size to sort
 - Implement toggle between ascending and descending sort order on repeated column clicks
 - Add comprehensive right-click context menu to cache ListView with Delete, Copy operations, and Select All
